pgadmin/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: pgadmin
  namespace: kws
  annotations:
      kubernetes.io/ingress.class: traefik  
spec:
  rules:
  - host: pgadmin.knd.com
    http:
      paths:
      - path: /
        backend:
          serviceName: pgadmin
          servicePort: 80
